; ModuleID = '/home/carl/AnghaBench/linux/arch/x86/kernel/apic/extr_io_apic.c_mp_ioapic_pin_count.c'
source_filename = "/home/carl/AnghaBench/linux/arch/x86/kernel/apic/extr_io_apic.c_mp_ioapic_pin_count.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mp_ioapic_gsi = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @mp_ioapic_pin_count to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mp_ioapic_pin_count(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.mp_ioapic_gsi*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call %struct.mp_ioapic_gsi* @mp_ioapic_gsi_routing(i32 %4)
  store %struct.mp_ioapic_gsi* %5, %struct.mp_ioapic_gsi** %3, align 8
  %6 = load %struct.mp_ioapic_gsi*, %struct.mp_ioapic_gsi** %3, align 8
  %7 = getelementptr inbounds %struct.mp_ioapic_gsi, %struct.mp_ioapic_gsi* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = load %struct.mp_ioapic_gsi*, %struct.mp_ioapic_gsi** %3, align 8
  %10 = getelementptr inbounds %struct.mp_ioapic_gsi, %struct.mp_ioapic_gsi* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 4
  %12 = sub nsw i32 %8, %11
  %13 = add nsw i32 %12, 1
  ret i32 %13
}

declare dso_local %struct.mp_ioapic_gsi* @mp_ioapic_gsi_routing(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
